salt/downloads/bugs/fixes/bug_issue_descriptions/salt-37934
### Description of Issue/Question
I've been trying to deploy a [NodeJS](https://nodejs.org/en/) server on FreeBSD and found that any Node program (`npm`, `node -v`, etc) was crashing when run by Salt, specifically when run from the master, see [node 9198](https://github.com/nodejs/node/issues/9818).

In troubleshooting this I found that it appears that even when daemonized with `-d`, `salt-minion` appears to be hanging onto STDIN. This can be demonstrated by the Node bug above, but is perhaps easier to demonstrate with Python. It only seems to be a problem with Python if I do something silly like invoke the interpreter with `cmd.run`, but with Node it means that all modules dealing with `npm` don't work as soon as that ssh session is gone.

### Setup
Setup a Salt Master and Salt Minion, both running FreeBSD 11, installed from ports.

I can provide the rc-script provided by the port if needed, but it basically just invokes `salt-minion -c <config-dir> -d`

### Steps to Reproduce Issue
SSH into the minion, gain root, and run `service salt_minion restart`. Do not exit the ssh session.

On the master run `# salt <minion name> cmd.run 'python'`.
The master will not return until it times out. Attempt to type into the minions ssh session. Most keystrokes are lost.

Exit your ssh session (you may have to kill it from your host). If the master is still waiting, it will return. In my case I got back
```
odin.waltonhoops.com:
    Python 2.7.12 (default, Nov  3 2016, 01:26:15) 
    [GCC 4.2.1 Compatible FreeBSD Clang 3.8.0 (tags/RELEASE_380/final 262564)] on freebsd11
    Type "help", "copyright", "credits" or "license" for more information.
    >>>   File "<stdin>", line 1
        h elo wold!exexeexttt
            ^
    SyntaxError: invalid syntax
    >>> >>> ... 
    Traceback (most recent call last):
      File "<stdin>", line 1, in <module>
    NameError: name 'xi' is not defined
    >>>
```

The garbage is the missing characters from my ssh session. Run ``# salt <minion name> cmd.run 'python'`` one more time on the master. It will return immediately with no output, now that the ssh session is gone.

### Versions Report
(Provided by running `salt --versions-report`. Please also mention any differences in master/minion versions.)
Minion and Master have identical versions.
```
Salt Version:
           Salt: 2016.3.4

Dependency Versions:
           cffi: 1.2.1
       cherrypy: 3.2.6
       dateutil: 2.5.3
          gitdb: Not Installed
      gitpython: Not Installed
          ioflo: Not Installed
         Jinja2: 2.8
        libgit2: Not Installed
        libnacl: Not Installed
       M2Crypto: Not Installed
           Mako: 1.0.3
   msgpack-pure: Not Installed
 msgpack-python: 0.4.7
   mysql-python: Not Installed
      pycparser: 2.10
       pycrypto: 2.6.1
         pygit2: Not Installed
         Python: 2.7.12 (default, Oct 11 2016, 14:05:18)
   python-gnupg: 2.0.2
         PyYAML: 3.11
          PyZMQ: 16.0.1
           RAET: Not Installed
          smmap: Not Installed
        timelib: Not Installed
        Tornado: 4.4.2
            ZMQ: 4.1.5

System Versions:
           dist:
        machine: amd64
        release: 11.0-RELEASE-p2
         system: FreeBSD
        version: Not Installed
```
